--- a/src/index.less
+++ b/src/index.less
@@ -13,3 +13,19 @@ canvas {
 #map{
 	height:100%;
 }
+
+#user_info {
+	position: fixed;
+	display: inline-block;
+	bottom: 10px;
+	left: 0;
+	padding: 10px;
+	z-index: 10;	
+	p { 
+		display: inline-block;
+		background-color: #fff;
+		margin: 5px 0px;
+		font-family: Arial;
+		font-weight: bold;
+	}
+}
